fixed missing border

--- a/style.css
+++ b/style.css
@@ -18,5 +18,5 @@ div {
 }
 
 .bugged {
-    border: 5px indianred;
+    border: 5px solid indianred;
 }
